--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #0a0a2e;
-  color: #e0e0ff;
+  background-color: #1a2c91;
+  color: hsl(188, 100%, 94%);
   margin: 0;
   padding: 0;
   line-height: 1.6;
