--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   line-height: 1.6;
 }
 
-a { color: #a5cddd; text-decoration: none; }
+a { color: #000000; text-decoration: none; }
 a:hover { text-decoration: underline; }
 
 header {
